# polarstate

./: .gitignore  .nojekyll  .pre-commit-config.yaml  get_started.html  index.html  pyproject.toml  requirements.txt  search.json  sitemap.xml
.github/workflows/: publish.yml  python-package.yml
docs/: .gitignore  _brand.yml  _quarto.yml  _sidebar.yml  get_started.qmd  get_started.quarto_ipynb  objects.json
docs/_site/: get_started.html  index.html  robots.txt  search.json  sitemap.xml
docs/_site/reference/: aj.html  index.html  predict.html
docs/_site/site_libs/bootstrap/: bootstrap-040c79759c0c13b5fd62a4eea67674e9.min.css  bootstrap-9934924e1f569941446efaa8889144ee.min.css  bootstrap-a9a19c1c5b688177cb18d42ce2da0b3c.min.css  bootstrap-dark-775155586088fccbd60c62feac04d5af.min.css
docs/_site/site_libs/quarto-html/: quarto-syntax-highlighting-08462e96cf79fbc63e40d1d92c0c41ab.css
docs/reference/: _sidebar.yml  aj.qmd  index.qmd  predict.qmd
reference/: aj.html  index.html  predict.html
site_libs/bootstrap/: bootstrap-1c989b4b99680caf772a360867002418.min.css  bootstrap-6982e8834f70bd3ed9a063887a0d40b4.min.css  bootstrap-92642db0abb842decb349f45e8a3daef.min.css  bootstrap-d0be846ebc35150e346898d4119a9e35.min.css  bootstrap-dark-76771ed4e219e3feea9e73685da7d00b.min.css
site_libs/quarto-html/: quarto-syntax-highlighting-75f85ff3afe47a507ba5bdac098e00a3.css
src/polarstate/: __init__.py  aj.py  predict.py
tests/: test_polarstate  test_polarstate.py
