[project]
name = "polarstate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Uriah Finkel", email = "Ufinkel@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "polars>=1.29.0",
]

[project.scripts]
polarstate = "polarstate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "polars>=1.29.0",
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
