[project]
name = "polarstate"
version = "0.1.8"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Uriah Finkel", email = "Ufinkel@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "polars>=1.30.0",
]

[project.scripts]
polarstate = "polarstate:main"

[build-system]
requires = ["uv_build>=0.7.20,<0.8.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "dcurves>=1.1.5",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "lifelines>=0.30.0",
    "marimo>=0.14.10",
    "nbclient>=0.10.2",
    "nbformat>=5.10.4",
    "pandas>=2.2.3",
    "polars>=1.30.0",
    "pre-commit>=4.2.0",
    "pyarrow>=20.0.0",
    "pytest>=8.3.5",
    "quarto>=0.1.0",
    "quartodoc>=0.10.0",
    "ruff>=0.11.11",
    "ty>=0.0.1a14",
    "uv>=0.7.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

